# yalis

./: .flake8  .gitattributes  .gitignore  README.md  README_mordor.md  README_perlmutter.md  analyze.ipynb  infer.py  memory.py  model.py  pyproject.toml  setup.py  tatus  test_conversion.py  verify_conversion.py
.github/workflows/: ci.yaml  formatting.yaml
benchmarking/vllm/: offline_specdec.py
benchmarks/: benchmark_moe.py
examples/: benchmark_yalis.py  compare_logits.py  debug_hf_yalis_comparison.py  infer.py  infer_cpu_offload.py  infer_dynamic_batch.py  infer_speculative.py  old_infer.py  online_infer.py  serve_minimal.py  shard_checkpoint.py  yalis_vs_hf_gptoss.py
scripts/: benchmark_pm.sh  check_tp_sharding.py  create_python_env_perlmutter.sh  create_tp_checkpoint.py  delta_env.sh  get_rank.sh  get_rank_polaris.sh  perlmutter_env.sh  run_pm.sh  run_pm_online.sh  run_polaris.sh  run_zt.sh  test_hf_gptoss.py  verify_tp_shards_against_full.py
tests/: README.md  get_rank_tests.sh  sample_dataset.py  test_nccl_comm.py
tests/basic_correctness/: conftest.py  flash.ini  run_tests.sh  sdpa.ini  test_speculative_decoding.py  test_yalis_vs_hf.py  utils.py
tests/basic_correctness/gpt-oss/: conftest.py  sdpa.ini  test_speculative_decoding.py  test_yalis_vs_hf.py  utils.py
tests/basic_correctness/single_gpu/: conftest.py  test_yalis_vs_hf.py
tests/comm_tests/: conftest.py  test_custom_nccl_comm.py
tests/performance/: conftest.py  test_perf_regression.py
tests/performance/baselines/: perf_baselines.json
tests/scripts/: run_hf_correctness_tests.sh  run_perf_regression_tests.sh  run_specdec_correctness_tests.sh
tests/unit_tests/: test_cuda_graph_manager.py
yalis/: __init__.py  config.py  constants.py  cuda_graph_manager.py  engine.py  infer.py  initialize.py  logger.py  model.py  model_loading.py  offloading.py  set_env.sh  timers.py  utils.py
yalis/attention/: __init__.py  backends.py  double_sparse.py  fa3.py  flash.py  flex.py  masking.py  nowmp_reference.py  paged_kv_cache.cpp  registry.py  sdpa.py  sdpa_and_flex.py  sparge.py  test_double_sparse_attention.py  test_nowmp_kernel.py  thresh.py  thresh_attn.py  thresh_attn_c.cpp  thresh_attn_cuda.cu  thresh_attn_cuda_nowmma.cu  thresh_nowmp.py  threshold_attention.py  threshold_attention_triton.py  threshold_attention_triton_WIP.py  topk.py  torch_compile_compatible_flash_attention.py  update_kv_cache.py  utils.py
yalis/attention/backend_impl/: flash.py  sdpa_and_flex.py
yalis/attention/double_sparse/: argsort.py  attention.py  bgemv.py  bgemv_int8.py  channel.py  heavy.py  sparse.py
yalis/attention/kernels/: thresh_attn_cuda_base.cu  thresh_attn_cuda_bitmask_v1.cu  thresh_attn_cuda_bitmask_v2.cu  thresh_attn_cuda_fused.cu  thresh_attn_cuda_fused_idxpack_v1.cu  thresh_attn_cuda_tiled_bitmask_v1.cu  thresh_attn_cuda_tiled_fused_v1.cu  thresh_attn_cuda_tiled_fused_v2.cu  thresh_attn_cuda_tiled_idxpack_v1.cu
yalis/attention/kv_cache/: __init__.py  kv_cache_policy.py  kv_slots_manager.py  slot_allocator.py
yalis/attention/nowmp_thresh/: test_nowmp_kernel.py  thresh_attn_nowmp_c.cpp  threshold_attention_nowmp.py
yalis/attention/nowmp_thresh/kernels/: thresh_attn_nowmp_cuda.cu
yalis/attention/sparge_attn/: __init__.py  sparge_attention.py  test_sparge_attention.py  utils.py
yalis/attention/utils/: flash_utils.py  flex_utils.py
yalis/attention/warmup_thresh/: run_ncu_single.py  thresh_attn_cuda copy.cu  threshold_attention.py  threshold_attention_triton.py  threshold_attention_triton_WIP.py
yalis/communication/: communication.py
yalis/csrc/: CMakeLists.txt  benchmark_tune_allreduce_preallocated.py  nvshmem_comm.cu  nvshmem_comm.h  nvshmem_comm.py  nvshmem_comm_bindings.cpp  nvshmem_utils.h  test_rank_worldsize_uid.py
yalis/csrc/include/nvshmem_comm/: coll.h  coll_factory.h  ll8_coll.cuh  nvshmem_comm.h  nvshmem_utils.h  simple_coll.cuh
yalis/csrc/src/nvshmem_comm/: ll8_coll.cu  nvshmem_comm.cpp  nvshmem_comm_bindings.cpp  simple_coll.cu
yalis/custom_comm/: pyproject.toml  tune_results.json
yalis/custom_comm/csrc/include/nvshmem_comm/: coll.h  coll_factory.h  ll8_coll.cuh  nvshmem_comm.h  nvshmem_utils.h  simple_coll.cuh
yalis/custom_comm/csrc/src/nvshmem_comm/: ll8_coll.cu  nvshmem_comm.cpp  nvshmem_comm_bindings.cpp  simple_coll.cu
yalis/custom_comm/src/yalis_nvshmem_collectives/: __init__.py  comm.py
yalis/custom_comm/tests/: test_rank_worldsize_uid.py
yalis/custom_comm/tuning/: benchmark_tune_allreduce_preallocated.py
yalis/offloading/: __init__.py  _move_rows_to_gpu  buffer_manager.py  constants.py  forward.py  manager.py  model.py
yalis/pipelines/: __init__.py  base_pipeline.py  base_pipline.py  basic_inference_pipeline.py  speculative_pipeline.py
yalis/serving/: async_yalis.py  core_client.py  engine_adapter.py  engine_core.py  engine_loop.py  executor.py  logger.py  output.py  output_processor.py  prompt.py  queue.py  scheduler.py  schemas.py  server.py  transport.py
yalis/tensor_parallel/: __init__.py  all_reduce_op.py  linear.py  moe.py  nvshmem_comm.py  rms_norm.py
(+7 files in other folders)
