# Copyright 2024 Parallel Software and Systems Group, University of Maryland.
# See the top-level LICENSE file for details.
#
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yalis"
version = "0.0.1"
authors = [
  { name="Siddharth Singh", email="ssingh37@umd.edu" },
  { name="Prajwal Singhania", email="ssingh37@umd.edu" },
  { name="Abhinav Bhatele", email="bhatele@cs.umd.edu"},
]
description = "Yet Another LLM Inference System"
readme = "README.md"
#license = { name = "Apache-2.0", file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch", "axonn", "litgpt", "transformers", "datasets"
]

[tool.setuptools.packages.find]
include = ["yalis"]
exclude = ["examples/", "**__pycache__"]

