[build-system]
requires = [
  "scikit-build-core>=0.9",
  "cmake>=3.24",
  "ninja",
  "pybind11>=2.11",
  "packaging",
]
build-backend = "scikit_build_core.build"

[project]
name = "yalis-nvshmem-collectives"
version = "0.1.0"
description = "NVSHMEM-based Low-Latency All-Reduce fror Inference"
requires-python = ">=3.9"
dependencies = ["torch>=2.7"]
authors = [{ name = "Prajwal Singhania" }]


[tool.scikit-build]
cmake.minimum-version = "3.24"
cmake.verbose = true
cmake.source-dir = "csrc"
sdist.include = ["csrc/**", "src/**", "../../LICENSE"]